--- a/seminarioFuentes2022.html
+++ b/seminarioFuentes2022.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Rocío" />
 
-<meta name="date" content="2022-12-07" />
+<meta name="date" content="2022-12-08" />
 
 <title>titulo</title>
 
@@ -1487,7 +1487,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">titulo</h1>
 <h4 class="author">Rocío</h4>
-<h4 class="date">2022-12-07</h4>
+<h4 class="date">2022-12-08</h4>
 
 </div>
 
@@ -1496,6 +1496,37 @@ border-radius: 0px;
 <h2>Introducción</h2>
 <div id="objetivos" class="section level3">
 <h3>Objetivos</h3>
+</div>
+</div>
+<div id="métodos" class="section level2">
+<h2>Métodos</h2>
+<div id="carga-de-paquetes" class="section level3">
+<h3>Carga de paquetes</h3>
+<pre class="r"><code>library(readr)
+library (dplyr)</code></pre>
+</div>
+<div id="carga-de-datos" class="section level3">
+<h3>Carga de datos</h3>
+<pre class="r"><code>registro_regional_de_sida &lt;- read_delim(&quot;DATA/registro-regional-de-sida.csv&quot;,
+                                        delim = &quot;;&quot;, escape_double = FALSE, trim_ws = TRUE)</code></pre>
+<pre><code>## Rows: 2702 Columns: 8
+## ── Column specification ────────────────────────────────────────────────────────
+## Delimiter: &quot;;&quot;
+## chr (4): Sexo, provincia, País de origen, Grupo de riesgo
+## dbl (4): Año de diagnóstico, Edad años, Edad meses, Código Grupo de riesgo
+## 
+## ℹ Use `spec()` to retrieve the full column specification for this data.
+## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
+<pre class="r"><code>registro_nuevas_infecciones_por_vih &lt;- read_delim(&quot;DATA/registro-nuevas-infecciones-por-vih.csv&quot;, 
+                                                  delim = &quot;;&quot;, escape_double = FALSE, trim_ws = TRUE)</code></pre>
+<pre><code>## Rows: 1435 Columns: 10
+## ── Column specification ────────────────────────────────────────────────────────
+## Delimiter: &quot;;&quot;
+## chr (7): Provincia residencia, País de nacimiento (si no es España), Sexo, g...
+## dbl (3): Edad, VIH, Código Grupo de riesgo asignado
+## 
+## ℹ Use `spec()` to retrieve the full column specification for this data.
+## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
 </div>
 </div>
 
